--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,7 +29,13 @@
     ></script>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <p>Hi there</p>
+    <div class="hero">
+      <p>Hello! I am</p>
+      <h1>Sharon Smit</h1>
+      <h2 class="mb-5">Front-end developer, based in The Netherlands</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Get started</a>
+      </div>
+    </div>
   </body>
 </html>
