--- a/index.html
+++ b/index.html
@@ -37,5 +37,54 @@
         <a href="#" class="btn btn-branding">Get started</a>
       </div>
     </div>
+    <p class="text-center m-5">Featured projects with my best project below</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-6 d-none d-lg-block">
+          <img
+            src="images/yogurt-project.png"
+            alt="Launch yogurt project"
+            class="img-fluid"
+          />
+        </div>
+          <div class="col-6">
+            <div class="project-description">
+            <h2 class="mb-5">Sleep project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              volutpat sed enim ac luctus. Vivamus sit amet risus a erat
+              molestie rutrum sit amet sit amet augue. Proin nibh turpis, mollis
+              quis magna sit amet, tempus ultrices massa. Integer porttitor
+              donec.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Launch project</a>
+          </div>
+          </div>
+        </div>
+      </div>
+       <div class="row mb-5">
+          <div class="col-6">
+            <div class="project-description">
+            <h2 class="mb-5">Weather project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              volutpat sed enim ac luctus. Vivamus sit amet risus a erat
+              molestie rutrum sit amet sit amet augue. Proin nibh turpis, mollis
+              quis magna sit amet, tempus ultrices massa. Integer porttitor
+              donec.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Launch project</a>
+          </div>
+          </div>
+          <div class="col-6 d-none d-lg-block">
+          <img
+            src="images/weather-project.png"
+            alt="Launch weather project"
+            class="img-fluid"
+          />
+        </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
