Fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -40,49 +40,66 @@
     <p class="text-center m-5">Featured projects with my best project below</p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col-6 d-none d-lg-block">
+        <div class="col d-none d-lg-block">
           <img
             src="images/yogurt-project.png"
-            alt="Launch yogurt project"
             class="img-fluid"
+            alt="Launch yogurt project"
           />
         </div>
-          <div class="col-6">
-            <div class="project-description">
-            <h2 class="mb-5">Sleep project</h2>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-              volutpat sed enim ac luctus. Vivamus sit amet risus a erat
-              molestie rutrum sit amet sit amet augue. Proin nibh turpis, mollis
-              quis magna sit amet, tempus ultrices massa. Integer porttitor
-              donec.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+              hendrerit orci a ante mattis vestibulum. Nunc in varius dui. Morbi
+              nec dictum enim. Curabitur ac commodo velit, ut blandit risus.
+              Quisque convallis nibh a purus bibendum, vitae bibendum fusce.
             </p>
-            <a href="#" class="btn btn-branding-outline">Launch project</a>
-          </div>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
-       <div class="row mb-5">
-          <div class="col-6">
-            <div class="project-description">
-            <h2 class="mb-5">Weather project</h2>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-              volutpat sed enim ac luctus. Vivamus sit amet risus a erat
-              molestie rutrum sit amet sit amet augue. Proin nibh turpis, mollis
-              quis magna sit amet, tempus ultrices massa. Integer porttitor
-              donec.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+              hendrerit orci a ante mattis vestibulum. Nunc in varius dui. Morbi
+              nec dictum enim. Curabitur ac commodo velit, ut blandit risus.
+              Quisque convallis nibh a purus bibendum, vitae bibendum fusce.
             </p>
-            <a href="#" class="btn btn-branding-outline">Launch project</a>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
-          </div>
-          <div class="col-6 d-none d-lg-block">
+        </div>
+        <div class="col d-none d-lg-block">
           <img
             src="images/weather-project.png"
-            alt="Launch weather project"
             class="img-fluid"
+            alt="Launch weather project"
           />
         </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/dictionary-project.png"
+            class="img-fluid"
+            alt="Launch dictionary project"
+          />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dictionary App</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+              hendrerit orci a ante mattis vestibulum. Nunc in varius dui. Morbi
+              nec dictum enim. Curabitur ac commodo velit, ut blandit risus.
+              Quisque convallis nibh a purus bibendum, vitae bibendum fusce.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
         </div>
       </div>
     </div>
