--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Front-end developer - Sharon Smit</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +34,7 @@
       <h1>Sharon Smit</h1>
       <h2 class="mb-5">Front-end developer, based in The Netherlands</h2>
       <div>
-        <a href="#" class="btn btn-branding">Get started</a>
+        <a href="about.html" class="btn btn-branding">Get started</a>
       </div>
     </div>
     <p class="text-center m-5">Featured projects with my best project below</p>
